# horse_racing

./: README.md  pyproject.toml
data/: columns_description.xlsx
src/: HORSE_RACING.ipynb
