[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Douglas-cc", email = "douglasdasilvasousa8@gmail.com"},
]
dependencies = [
    "pandas>=2.1.0",
    "numpy>=1.25.2",
    "ipykernel>=6.25.2",
    "matplotlib>=3.7.2",
    "seaborn>=0.12.2",
    "pymoo>=0.6.0.1",
    "klib>=1.1.2",
    "missingno>=0.5.2",
    "pandas-profiling>=3.2.0",
    "statsmodels>=0.14.0",
    "scikit-learn>=1.3.0",
    "yellowbrick>=1.5",
    "nbformat>=5.9.2",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

